# Lingorank-Interface

./: .gitignore  README.md  main.py  pyproject.toml  run.sh
cache/: cache.db-shm  cache.db-wal
data/: articles.csv  articles.json  simplifications.json
data/models/: gpt-3.5-turbo-1106_trained.json
src/: Config.py  Exceptions.py  Logger.py
src/backend/: ArticleDatabase.py  Models.py
src/frontend/: App.py  ArticleList.py  ArticlePage.py  app.py
src/frontend/helpers/: pages.py
src/frontend/pages/: ArticleList.py  ArticlePage.py
tests/: TestModels.py
