[tool.poetry]
name = "lingorank-interface"
version = "0.1.0"
description = "Dash interface for presenting difficulty estimation and simplification results for French texts"
authors = ["Henri Jamet <henri.jamet@unil.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.13"
pandas = "^2.2.1"
dash = {extras = ["diskcache"], version = "^2.16.1"}
dash-mantine-components = "^0.12.1"
transformers = "^4.38.2"
torch = "^2.2.1"
peft = "^0.9.0"
flask = "^3.0.2"
black = "^24.2.0"
gitpython = "^3.1.42"
sentencepiece = "^0.2.0"
bitsandbytes = "^0.43.0"
protobuf = "^4.25.3"
datasets = "^2.18.0"
dash-iconify = "^0.1.2"
markdownify = "^0.11.6"
beautifulsoup4 = "^4.12.3"
requests = "^2.31.0"
pillow = "^10.2.0"
celery = "^5.3.6"
diskcache = "^5.6.3"
openai = "^1.16.2"
nltk = "^3.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
